--- a/code/TGN/Main_notebook.ipynb
+++ b/code/TGN/Main_notebook.ipynb
@@ -34,7 +34,7 @@
    "id": "09fea656",
    "metadata": {},
    "source": [
-    "## Prepare dataset"
+    "## A. Prepare dataset"
    ]
   },
   {
@@ -42,9 +42,9 @@
    "id": "c17ba37c",
    "metadata": {},
    "source": [
-    "### Benchmark\n",
+    "### 1) Benchmark\n",
     "\n",
-    "#### To do: choice of the dataset\n",
+    "#### a - To do: choice of the dataset\n",
     "\n",
     "Here you have to choose the dataset on which you want to test the algorithm.\n",
     "The following choices are available : uci, digg, email, btc_alpha, btc_otc, AST."
