--- a/code/TGN/Main_notebook.ipynb
+++ b/code/TGN/Main_notebook.ipynb
@@ -153,7 +153,7 @@
    "id": "4e089801",
    "metadata": {},
    "source": [
-    "#### Not to modify\n",
+    "#### b - Not to modify\n",
     "\n",
     "The following cells shouldn't be modified. The result of the last cell, i.e. the last training instant, have to be noted.\n",
     "It will be used for TGN training."
@@ -354,7 +354,7 @@
    "id": "ccecd835",
    "metadata": {},
    "source": [
-    "### Synthetic"
+    "### 2) Synthetic"
    ]
   },
   {
@@ -362,7 +362,7 @@
    "id": "0f03021c",
    "metadata": {},
    "source": [
-    "#### To modify: choice of the parameters"
+    "#### a - To modify: choice of the parameters"
    ]
   },
   {
@@ -382,7 +382,7 @@
    "id": "168ea6ff",
    "metadata": {},
    "source": [
-    "#### Not to modify"
+    "#### b - Not to modify"
    ]
   },
   {
@@ -513,8 +513,8 @@
    "id": "fc2df890",
    "metadata": {},
    "source": [
-    "## TGN training\n",
-    "### To do: for benchmark datasets\n",
+    "## B. TGN training\n",
+    "### 1) To do: for benchmark datasets\n",
     "Modify the name of the dataset (e.g. btc_alpha_TADDY_005_nop or uci_TADDY_01_nop) and the last training instant (e.g. --val_time $57711600.0$ for btc_alpha). The last training instant is independent of the anomaly proportion."
    ]
   },
@@ -685,7 +685,7 @@
    "id": "331879b8",
    "metadata": {},
    "source": [
-    "### To do: for synthetic datasets"
+    "### 2) To do: for synthetic datasets"
    ]
   },
   {
@@ -703,7 +703,7 @@
    "id": "aa5fa58d",
    "metadata": {},
    "source": [
-    "## Anomaly detection"
+    "## C. Anomaly detection"
    ]
   },
   {
@@ -711,7 +711,7 @@
    "id": "3a42322e",
    "metadata": {},
    "source": [
-    "### To do: choice of the dataset\n",
+    "### 1) To do: choice of the dataset\n",
     "The format for benchmark datasets is the following: dataset_TADDY_AnomalyProp_nop.\n",
     "For the Synthetic dataset: Synthetic."
    ]
@@ -731,7 +731,7 @@
    "id": "5699cf39",
    "metadata": {},
    "source": [
-    "### Not to modify: download model and data\n",
+    "### 2) Not to modify: download model and data\n",
     "#### Data"
    ]
   },
