--- a/code/TGN/Main_notebook.ipynb
+++ b/code/TGN/Main_notebook.ipynb
@@ -732,7 +732,7 @@
    "metadata": {},
    "source": [
     "### 2) Not to modify: download model and data\n",
-    "#### Data"
+    "#### a - Data"
    ]
   },
   {
@@ -757,7 +757,7 @@
     }
    ],
    "source": [
-    "### Extract data for training, validation and testing\n",
+    "### b - Extract data for training, validation and testing\n",
     "node_features, edge_features, full_data, train_data, val_data, test_data, new_node_val_data, \\\n",
     "new_node_test_data = get_data(data_set) #, randomize_features=True)\n",
     "\n",
@@ -773,7 +773,7 @@
    "id": "333af54f",
    "metadata": {},
    "source": [
-    "#### Parameters"
+    "#### c - Parameters"
    ]
   },
   {
@@ -801,7 +801,7 @@
    "id": "d78944f3",
    "metadata": {},
    "source": [
-    "#### Model"
+    "#### d - Model"
    ]
   },
   {
@@ -881,7 +881,7 @@
    "id": "a38f8a54",
    "metadata": {},
    "source": [
-    "### Not to modify: anomaly scores computation"
+    "### 2) Not to modify: anomaly scores computation"
    ]
   },
   {
