--- a/code/TGN/Main_notebook.ipynb
+++ b/code/TGN/Main_notebook.ipynb
@@ -757,7 +757,7 @@
     }
    ],
    "source": [
-    "### b - Extract data for training, validation and testing\n",
+    "### Extract data for training, validation and testing\n",
     "node_features, edge_features, full_data, train_data, val_data, test_data, new_node_val_data, \\\n",
     "new_node_test_data = get_data(data_set) #, randomize_features=True)\n",
     "\n",
@@ -773,7 +773,7 @@
    "id": "333af54f",
    "metadata": {},
    "source": [
-    "#### c - Parameters"
+    "#### b - Parameters"
    ]
   },
   {
@@ -801,7 +801,7 @@
    "id": "d78944f3",
    "metadata": {},
    "source": [
-    "#### d - Model"
+    "#### c - Model"
    ]
   },
   {
@@ -903,7 +903,7 @@
    "id": "9dbf51c3",
    "metadata": {},
    "source": [
-    "### Results"
+    "### 3) Results"
    ]
   },
   {
@@ -991,7 +991,7 @@
    "id": "c90d73ec",
    "metadata": {},
    "source": [
-    "## Not to modify: reliability module"
+    "## D. Not to modify: reliability module"
    ]
   },
   {
@@ -999,7 +999,7 @@
    "id": "df4c341d",
    "metadata": {},
    "source": [
-    "### Reliability scores computation"
+    "### 1) Reliability scores computation"
    ]
   },
   {
@@ -1371,7 +1371,7 @@
    "id": "520caadc",
    "metadata": {},
    "source": [
-    "### Results"
+    "### 2) Results"
    ]
   },
   {
